# MLOps

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py
models/: modelo.sav
notebooks/: houses_price.ipynb
src/app/: main.py
