[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["renato <renato.costa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
textblob = "^0.17.1"
jupyter = "^1.0.0"
google-cloud-translate = "^3.15.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
flask-basicauth = "^0.2.0"
cookiecutter = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
